[tool.poetry]
name = "beancount-example"
version = "0.1.0"
description = "A small container for generating example Beancount data"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
beancount = "^2.3.4"
aiohttp = "^3.8.1"
loguru = "^0.6.0"
gunicorn = "^20.1.0"
loguricorn = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pytest = "^7.0.1"
isort = "^5.10.1"
mypy = "^0.931"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
