[tool.poetry]
name = "beancount-example"
version = "0.1.1"
description = "A small container for generating example Beancount data"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
license = "MIT"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
beancount = "2.3.4"
aiohttp = "^3.8.1"
loguru = "^0.6.0"
gunicorn = "^20.1.0"
loguricorn = "^0.1.0"
aiocache = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
isort = "^5.10.1"
mypy = "^0.931"
coverage = {extras = ["toml"], version = "^6.3.1"}
pytest-aiohttp = "^1.0.4"
pytest-docker-tools = "^3.1.3"
requests = "^2.27.1"
bandit = "^1.7.2"
pytest-cov = "^3.0.0"
nox = "^2022.1.7"
nox-poetry = "^0.9.0"

[tool.bandit]
skips = ["B311", "B404", "B603"]

[tool.black]
line-length = 79

[tool.coverage.report]
fail_under = 90

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
